# wireless-regdb

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
examples/: generate-regdb.rs
src/: binary.rs  lexer.rs  lib.rs
src/tests/: db_2.txt
